--- a/web/index.html
+++ b/web/index.html
@@ -9,6 +9,46 @@
   <body>
     <h1>LabTrack Equipment Management</h1>
 
+    <!-- Search/filter form -->
+    <h2>Search Equipment</h2>
+    <form id="searchForm">
+      <label for="searchId">ID:</label>
+      <input type="text" id="searchId" name="id" /><br /><br />
+
+      <label for="searchName">Name:</label>
+      <input type="text" id="searchName" name="name" /><br /><br />
+
+      <label for="searchCount">Count:</label>
+      <input type="number" id="searchCount" name="count" /><br /><br />
+
+      <label for="searchType">Type:</label>
+      <input type="text" id="searchType" name="type" /><br /><br />
+
+      <label for="searchDangerFactor">Danger Factor:</label>
+      <input
+        type="number"
+        id="searchDangerFactor"
+        name="danger_factor"
+      /><br /><br />
+
+      <label for="searchExpiryDate">Expiry Date:</label>
+      <input type="text" id="searchExpiryDate" name="expiry_date" /><br /><br />
+
+      <label for="searchLab">Lab:</label>
+      <input type="text" id="searchLab" name="lab" /><br /><br />
+
+      <label for="searchShelfNumber">Shelf Number:</label>
+      <input
+        type="text"
+        id="searchShelfNumber"
+        name="shelf_number"
+      /><br /><br />
+
+      <button type="submit">Search</button>
+    </form>
+
+    <hr />
+
     <!-- Form for adding new equipment -->
     <h2>Add New Equipment</h2>
     <form id="addForm">
