--- a/web/index.html
+++ b/web/index.html
@@ -23,7 +23,22 @@
     <section>
       <h2>Equipment List</h2>
     </section>
-    <ul id="equipmentList"></ul>
+    <table id="equipmentTable" class="styled-table">
+      <thead>
+        <tr>
+          <th>ID</th>
+          <th>Name</th>
+          <th>Type</th>
+          <th>Lab</th>
+          <th>Shelf Number</th>
+          <th>Danger Factor</th>
+          <th>Expiry Date</th>
+          <th>Count</th>
+          <th>Actions</th>
+        </tr>
+      </thead>
+      <tbody id="equipmentList"></tbody>
+    </table>
 
     <br /><br />
 
