--- a/web/index.html
+++ b/web/index.html
@@ -7,17 +7,20 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body class="body">
-    <span class="box">
-      <header>LabTrack Equipment Management</header>
-      <nav class="nav">
-        <a href="#equipmentList">Equipment List</a>
-        <a href="#searchForm">Search Equipment</a>
-        <a href="#addForm">Add New Equipment</a>
-        <a href="#bulkAddForm">Bulk Add Equipment</a>
-        <a href="#bulkDeleteForm">Bulk Delete Equipment</a>
-        <a href="#editForm">Edit Equipment</a>
-      </nav>
-    </span>
+    <header>
+      <a href="/">
+        <img src="/static/logo.png" alt="LabTrack Logo" class="logo" />
+      </a>
+    </header>
+    <h1>LabTrack Equipment Management</h1>
+    <nav class="nav">
+      <a href="#equipmentList">Equipment List</a>
+      <a href="#searchForm">Search Equipment</a>
+      <a href="#addForm">Add New Equipment</a>
+      <a href="#bulkAddForm">Bulk Add Equipment</a>
+      <a href="#bulkDeleteForm">Bulk Delete Equipment</a>
+      <a href="#editForm">Edit Equipment</a>
+    </nav>
 
     <!-- Displaying equipment list -->
     <section>
@@ -195,6 +198,8 @@
 
       <button type="submit">Update Equipment</button>
     </form>
+
+    <footer>LabTrack © sayhan1610</footer>
 
     <script src="script.js"></script>
   </body>
