User Modal Updates

--- a/web/index.html
+++ b/web/index.html
@@ -201,6 +201,15 @@
 
     <footer>LabTrack © sayhan1610</footer>
 
+    <!-- Modal for items expiring within 2 weeks -->
+    <div id="expiryModal" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2>Items Expiring Within 2 Weeks</h2>
+        <ul id="expiryList"></ul>
+      </div>
+    </div>
+
     <script src="script.js"></script>
   </body>
 </html>
